submission/21-logic-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logic-api
spec:
  selector:
    app: logic-api
  ports:
    - port: 5000
      targetPort: 5000
