submission/32-feedback-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-api
spec:
  selector:
    app: feedback-api
  ports:
    - port: 9000
      targetPort: 80
